# MuditaOS

cmake/modules/: Board.cmake
module-apps/application-music-player/: ApplicationMusicPlayer.cpp  AudioNotificationsHandler.cpp  AudioNotificationsHandler.hpp  CMakeLists.txt
module-apps/application-music-player/data/: MusicPlayerStyle.hpp  SongsListWindowData.hpp
module-apps/application-music-player/include/application-music-player/: ApplicationMusicPlayer.hpp
module-apps/application-music-player/models/: AlbumsModel.cpp  AlbumsModel.hpp  ArtistsModel.cpp  ArtistsModel.hpp  SongsCache.cpp  SongsCache.hpp  SongsModel.cpp  SongsModel.hpp  SongsRepository.cpp  SongsRepository.hpp
module-apps/application-music-player/presenters/: AlbumsPresenter.cpp  AlbumsPresenter.hpp  ArtistsPresenter.cpp  ArtistsPresenter.hpp  SongsPresenter.cpp  SongsPresenter.hpp
module-apps/application-music-player/utils/: Utils.hpp
module-apps/application-music-player/widgets/: FolderItem.cpp  FolderItem.hpp  SongItem.cpp  SongItem.hpp
module-apps/application-music-player/windows/: MusicPlayerAlbumsWindow.cpp  MusicPlayerAlbumsWindow.hpp  MusicPlayerArtistsWindow.cpp  MusicPlayerArtistsWindow.hpp  MusicPlayerMainWindow.cpp  MusicPlayerMainWindow.hpp  MusicPlayerSongsListWindow.cpp  MusicPlayerSongsListWindow.hpp
module-audio/Audio/: Audio.cpp  Audio.hpp  AudioDeviceFactory.hpp
module-audio/tags_fetcher/: TagsFetcher.cpp  TagsFetcher.hpp
module-bluetooth/Bluetooth/: BluetoothWorker.cpp  BluetoothWorker.hpp  BtKeysStorage.cpp
module-bsp/bsp/: common.cpp  common.hpp
module-db/Interface/: MultimediaFilesRecord.cpp  MultimediaFilesRecord.hpp
module-db/Tables/: ContactsAddressTable.cpp  ContactsAddressTable.hpp  MultimediaFilesTable.cpp  MultimediaFilesTable.hpp  Record.hpp
module-gui/gui/: SwitchData.hpp
module-services/service-audio/: ServiceAudio.cpp
module-services/service-bluetooth/: ServiceBluetooth.cpp
module-services/service-cellular/: SignalStrength.cpp
module-services/service-desktop/: ServiceDesktop.cpp  WorkerDesktop.cpp  WorkerDesktop.hpp
module-services/service-eink/: ServiceEink.cpp
(+136 files in other folders)
